[gd_scene load_steps=22 format=3 uid="uid://b1iyh6nt3gjou"]

[ext_resource type="Script" uid="uid://sgws6qjtv6mk" path="res://scripts/managers/game_file_verifier.gd" id="1_55edb"]
[ext_resource type="Script" uid="uid://cj36cjoo4751e" path="res://scripts/managers/api_manager.gd" id="1_ho3eq"]
[ext_resource type="Script" uid="uid://ds8mpidl03flq" path="res://scripts/managers/game_manager.gd" id="1_m1b03"]
[ext_resource type="Script" uid="uid://bymfoc07b35y1" path="res://scripts/managers/fight_manager.gd" id="3_06ace"]
[ext_resource type="Script" uid="uid://dfyjdsog1fy7v" path="res://scripts/managers/ui_item_manager.gd" id="4_5yrbq"]
[ext_resource type="Script" uid="uid://4v4lxtijmd7q" path="res://scripts/managers/event_manager.gd" id="4_8pxfq"]
[ext_resource type="Material" uid="uid://fs2qwxy2iiwe" path="res://assets/materials/outline/item_outline_shader_material.tres" id="5_41ocu"]
[ext_resource type="PackedScene" uid="uid://hhwydbml1pxj" path="res://scenes/templates/item_template.tscn" id="6_x5jd4"]
[ext_resource type="Script" uid="uid://d0q6asix6qkpp" path="res://scripts/ui/ui_inventory.gd" id="8_3u463"]
[ext_resource type="Material" uid="uid://con2a3dyhm53r" path="res://assets/materials/background/warped_fractal_noise_shader_material.tres" id="9_2s12t"]
[ext_resource type="Texture2D" uid="uid://4121s6jxng6r" path="res://assets/textures/ui/inventory/inventory_grid.png" id="9_tj5av"]
[ext_resource type="Script" uid="uid://cnd3pfhmh386n" path="res://scripts/ui/ui_item_selector.gd" id="11_gtgx7"]
[ext_resource type="Script" uid="uid://6l4padk4mp5u" path="res://scripts/ui/ui_event_selector.gd" id="12_1wa4a"]
[ext_resource type="Script" uid="uid://bifu6x5yjysjs" path="res://scripts/debug/ui_debug_item_spawner.gd" id="12_7vg73"]
[ext_resource type="Script" uid="uid://c2beptex8s06u" path="res://scripts/debug/ui_debug_event_selector.gd" id="13_baajt"]
[ext_resource type="Material" uid="uid://dcofqc06xashp" path="res://assets/materials/stylized_text/stylized_text_material.tres" id="15_crqjd"]
[ext_resource type="Texture2D" uid="uid://dtxk2qqwssgoa" path="res://assets/textures/ui/inventory/trash.png" id="18_a0cbh"]
[ext_resource type="PackedScene" uid="uid://cn2vgqp0itllx" path="res://scenes/templates/health_display.tscn" id="19_8pxfq"]
[ext_resource type="Texture2D" uid="uid://cjoeqqi3l8tn6" path="res://assets/textures/ui/panels/reward.png" id="20_2s12t"]
[ext_resource type="Script" uid="uid://8ign16bjr6ni" path="res://scripts/debug/ui_debug_inventory_export.gd" id="22_yspe6"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8pxfq"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
spread = 180.0
initial_velocity_min = 4.0
initial_velocity_max = 24.0
gravity = Vector3(0, 0, 0)
turbulence_enabled = true

[node name="main_scene" type="Node2D"]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("game_file_verifier")]
script = ExtResource("1_m1b03")
game_file_verifier = NodePath("../GameFileVerifier")
metadata/_custom_type_script = "uid://ds8mpidl03flq"

[node name="GameFileVerifier" type="Node" parent="."]
script = ExtResource("1_55edb")
metadata/_custom_type_script = "uid://sgws6qjtv6mk"

[node name="FightManager" type="Node" parent="." node_paths=PackedStringArray("player_inventory", "enemy_inventory", "player_health_display", "enemy_health_display")]
script = ExtResource("3_06ace")
player_inventory = NodePath("../PanelContainer Player Inventory")
enemy_inventory = NodePath("../PanelContainer Enemy Inventory")
player_health_display = NodePath("../Control Player health")
enemy_health_display = NodePath("../Control Enemy health")
metadata/_custom_type_script = "uid://bymfoc07b35y1"

[node name="EventManager" type="Node2D" parent="." node_paths=PackedStringArray("camera", "api_manager", "game_manager", "fight_manager", "event_choice_container", "event_reward_container", "event_reward_center", "event_reward_roll_parent", "event_reward_label", "event_reward_take_button", "event_reward_gamble_button", "event_button_1", "event_button_2", "event_button_3", "proceed_button", "trash_inventory", "player_inventory", "enemy_inventory", "enemy_label", "default_camera_position", "fight_camera_position", "fight_label", "event_parent", "background")]
script = ExtResource("4_8pxfq")
camera = NodePath("../Camera2D")
api_manager = NodePath("../APIManager")
game_manager = NodePath("../GameManager")
fight_manager = NodePath("../FightManager")
event_choice_container = NodePath("../VBoxContainer Event selection")
event_reward_container = NodePath("../TextureRect Reward")
event_reward_center = NodePath("../TextureRect Reward/Control Center")
event_reward_roll_parent = NodePath("../TextureRect Reward/Control Center/Control Roll parent")
event_reward_label = NodePath("../TextureRect Reward/Label")
event_reward_take_button = NodePath("../TextureRect Reward/Button Take")
event_reward_gamble_button = NodePath("../TextureRect Reward/Button Gamble")
event_button_1 = NodePath("../VBoxContainer Event selection/Button Event 1")
event_button_2 = NodePath("../VBoxContainer Event selection/Button Event 2")
event_button_3 = NodePath("../VBoxContainer Event selection/Button Event 3")
proceed_button = NodePath("../Button Proceed")
trash_inventory = NodePath("../TextureButton Trash")
player_inventory = NodePath("../PanelContainer Player Inventory")
enemy_inventory = NodePath("../PanelContainer Enemy Inventory")
enemy_label = NodePath("../Label Enemy name")
default_camera_position = NodePath("../Control Default camera position")
fight_camera_position = NodePath("../Control Fight camera position")
fight_label = NodePath("../Label Fight label")
event_parent = NodePath("../Control Event parent")
background = NodePath("../Camera2D/TextureRect Background")
metadata/_custom_type_script = "uid://4v4lxtijmd7q"

[node name="APIManager" type="Node" parent="." node_paths=PackedStringArray("game_manager")]
script = ExtResource("1_ho3eq")
game_manager = NodePath("../GameManager")
metadata/_custom_type_script = "uid://cj36cjoo4751e"

[node name="Button Roll enemy" type="Button" parent="APIManager"]
visible = false
offset_left = 80.0
offset_top = 208.0
offset_right = 160.0
offset_bottom = 224.0
text = "Roll enemy"

[node name="Button Randomize seed" type="Button" parent="APIManager"]
offset_left = 272.0
offset_top = 224.0
offset_right = 370.0
offset_bottom = 240.0
text = "Randomize seed"

[node name="UIItemManager" type="Node2D" parent="." node_paths=PackedStringArray("trash_inventory", "drag_effect_particles")]
script = ExtResource("4_5yrbq")
outline_material = ExtResource("5_41ocu")
item_template = ExtResource("6_x5jd4")
trash_inventory = NodePath("../TextureButton Trash")
drag_effect_particles = NodePath("CPUParticles2D")

[node name="CPUParticles2D" type="GPUParticles2D" parent="UIItemManager"]
z_index = 1
position = Vector2(-16, 0)
emitting = false
amount = 4
lifetime = 0.5
explosiveness = 0.25
randomness = 0.25
process_material = SubResource("ParticleProcessMaterial_8pxfq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(224, 128)
zoom = Vector2(2, 2)

[node name="TextureRect Background" type="ColorRect" parent="Camera2D"]
z_index = -1000
material = ExtResource("9_2s12t")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -284.44446
offset_top = -160.0
offset_right = 284.44446
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label Player name" type="Label" parent="."]
material = ExtResource("15_crqjd")
offset_left = 16.0
offset_top = 94.0
offset_right = 208.0
offset_bottom = 108.0

[node name="PanelContainer Player Inventory" type="TextureRect" parent="."]
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = 16.0
offset_right = 208.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("9_tj5av")
stretch_mode = 1
script = ExtResource("8_3u463")
container_size = Vector2i(12, 5)

[node name="Label Enemy name" type="Label" parent="."]
modulate = Color(1, 0, 0, 1)
material = ExtResource("15_crqjd")
offset_left = 240.0
offset_top = 94.0
offset_right = 432.0
offset_bottom = 108.0
horizontal_alignment = 2

[node name="PanelContainer Enemy Inventory" type="TextureRect" parent="."]
visible = false
z_as_relative = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 240.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("9_tj5av")
stretch_mode = 1
script = ExtResource("8_3u463")
metadata/_edit_use_anchors_ = true

[node name="Label Enemy name" type="Label" parent="PanelContainer Enemy Inventory"]
modulate = Color(1, 0, 0, 1)
material = ExtResource("15_crqjd")
layout_mode = 0
offset_top = 226.0
offset_right = 192.0
offset_bottom = 240.0
horizontal_alignment = 2

[node name="TextureButton Trash" type="TextureRect" parent="."]
offset_left = 16.0
offset_top = 160.0
offset_right = 64.0
offset_bottom = 240.0
texture = ExtResource("18_a0cbh")
script = ExtResource("8_3u463")
container_size = Vector2i(3, 5)

[node name="LineEdit Item spawner" type="LineEdit" parent="." node_paths=PackedStringArray("game_file_verifier", "option_list")]
z_index = 5
offset_left = 96.0
offset_top = 109.0
offset_right = 208.0
offset_bottom = 131.0
placeholder_text = " Enter item name"
script = ExtResource("11_gtgx7")
game_file_verifier = NodePath("../GameFileVerifier")
option_list = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="LineEdit Item spawner"]
layout_mode = 0
offset_top = -160.0
offset_right = 112.0
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="Control Item spawn position" type="Control" parent="LineEdit Item spawner"]
layout_mode = 1
anchor_left = 1.5710001
anchor_top = 0.5
anchor_right = 1.5710001
anchor_bottom = 0.5
offset_left = 16.047989
offset_right = 16.047989

[node name="Button Spawn" type="Button" parent="LineEdit Item spawner" node_paths=PackedStringArray("item_name_lineedit", "item_origin")]
layout_mode = 0
offset_left = 128.0
offset_top = 3.0
offset_right = 176.0
offset_bottom = 19.0
text = "Spawn"
script = ExtResource("12_7vg73")
item_name_lineedit = NodePath("..")
item_origin = NodePath("../Control Item spawn position")

[node name="LineEdit Event selector" type="LineEdit" parent="." node_paths=PackedStringArray("game_file_verifier", "option_list")]
z_index = 5
offset_left = 80.0
offset_top = 224.0
offset_right = 256.0
offset_bottom = 246.0
placeholder_text = " Enter event name"
script = ExtResource("12_1wa4a")
game_file_verifier = NodePath("../GameFileVerifier")
option_list = NodePath("VBoxContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="LineEdit Event selector"]
layout_mode = 0
offset_top = -160.0
offset_right = 176.0
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="Button Spawn" type="Button" parent="LineEdit Event selector" node_paths=PackedStringArray("item_name_lineedit", "event_manager")]
layout_mode = 0
offset_left = 304.0
offset_right = 352.0
offset_bottom = 16.0
text = "Select"
script = ExtResource("13_baajt")
item_name_lineedit = NodePath("..")
event_manager = NodePath("../../EventManager")

[node name="Button Export" type="Button" parent="." node_paths=PackedStringArray("target_inventory")]
offset_left = 16.0
offset_top = 112.0
offset_right = 80.0
offset_bottom = 128.0
text = "Export"
script = ExtResource("22_yspe6")
target_inventory = NodePath("../PanelContainer Player Inventory")

[node name="Control Player health" parent="." instance=ExtResource("19_8pxfq")]

[node name="Control Enemy health" parent="." instance=ExtResource("19_8pxfq")]
offset_left = 240.0
offset_right = 432.0

[node name="VBoxContainer Event selection" type="VBoxContainer" parent="."]
visible = false
offset_left = 288.0
offset_top = 34.0
offset_right = 432.0
offset_bottom = 130.0
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer Event selection"]
material = ExtResource("15_crqjd")
layout_mode = 2
text = "Choose event"
horizontal_alignment = 1

[node name="Button Event 1" type="Button" parent="VBoxContainer Event selection"]
material = ExtResource("15_crqjd")
layout_mode = 2
toggle_mode = true
text = "Event 1"

[node name="Button Event 2" type="Button" parent="VBoxContainer Event selection"]
material = ExtResource("15_crqjd")
layout_mode = 2
toggle_mode = true
text = "Event 2"

[node name="Button Event 3" type="Button" parent="VBoxContainer Event selection"]
material = ExtResource("15_crqjd")
layout_mode = 2
focus_neighbor_bottom = NodePath("../../Control Proceed/Button Proceed")
toggle_mode = true
text = "Event 3"

[node name="TextureRect Reward" type="TextureRect" parent="."]
visible = false
offset_left = 288.0
offset_top = 14.0
offset_right = 434.0
offset_bottom = 96.0
texture = ExtResource("20_2s12t")

[node name="Control Center" type="Control" parent="TextureRect Reward"]
z_index = 4
clip_contents = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -40.0
offset_right = 73.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(73, 40)

[node name="Control Roll parent" type="Control" parent="TextureRect Reward/Control Center"]
anchors_preset = 0
offset_left = 73.0
offset_top = 40.0
offset_right = 74.0
offset_bottom = 40.0

[node name="Button Take" type="Button" parent="TextureRect Reward"]
material = ExtResource("15_crqjd")
layout_mode = 0
offset_left = 1.0
offset_top = 97.0
offset_right = 65.0
offset_bottom = 113.0
text = "Take"

[node name="Button Gamble" type="Button" parent="TextureRect Reward"]
material = ExtResource("15_crqjd")
layout_mode = 0
offset_left = 81.0
offset_top = 97.0
offset_right = 145.0
offset_bottom = 113.0
text = "Reroll"

[node name="Label" type="Label" parent="TextureRect Reward"]
layout_mode = 0
offset_top = 114.0
offset_right = 144.0
offset_bottom = 178.0
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control Default camera position" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 224.0
offset_top = 128.0
offset_right = 224.0
offset_bottom = 128.0
metadata/_edit_use_anchors_ = true

[node name="Control Fight camera position" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 224.0
offset_top = -18.0
offset_right = 224.0
offset_bottom = -18.0
metadata/_edit_use_anchors_ = true

[node name="Marker2D Fight camera top edge" type="Marker2D" parent="."]
position = Vector2(224, -146)

[node name="Label Fight label" type="RichTextLabel" parent="."]
material = ExtResource("15_crqjd")
offset_left = 256.0
offset_top = 96.0
offset_right = 432.0
offset_bottom = 160.0
mouse_filter = 2
horizontal_alignment = 1

[node name="Button Proceed" type="Button" parent="."]
material = ExtResource("15_crqjd")
offset_left = 288.0
offset_top = 272.0
offset_right = 400.0
offset_bottom = 288.0
focus_neighbor_top = NodePath("../../VBoxContainer Event selection/Button Event 3")
text = "Proceed"

[node name="Control Event parent" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 288.0
offset_top = 16.0
offset_right = 432.0
offset_bottom = 176.0
mouse_filter = 2

[connection signal="pressed" from="APIManager/Button Roll enemy" to="APIManager" method="roll_enemy"]
[connection signal="pressed" from="APIManager/Button Randomize seed" to="GameManager" method="reset_seed"]
